# any-on

./: .env.cloud  .env.example  .gitignore  .mcp.json  .npmrc  .tmp-deploy.db  BRANCH_VS_WORKTREE.md  CLAUDE.md  Cargo.toml  Dockerfile  GITHUB_OAUTH_SETUP.md  GIT_WORKTREE_GUIDE.md  README.md  SETUP_SUMMARY.md  WORKTREE_MERGE_GUIDE.md  local-build.sh  package.json  pnpm-workspace.yaml  브라우저_자동_열기_문제_분석.md  웹버전_에러_가능_항목.md  프로젝트_생성_주의사항_분석.md
.cargo/: config.toml
.claude/: CRITICAL-RULES.md  README.md
.serena/: project.yml
.sqlx/: query-23cf3962cef6022c7e16634373b889a6c5d64d3879ae4be97e9d9068a78ba16f.json  query-23f172b4bfddb04aadbc62fd3a7b2bb2028975ee126e513c211af5121b6c3e91.json  query-27c6a5ea5b380a56f4f8eadbae1f63cedddf32404d061db728e494635cfdc609.json  query-38cdb54d9928c16465013b1476a4ede58dfd05f49962f793f7549e74a7c383e3.json  query-3bad792ca970ef8fbcf72de5c0b2cfa0907a88bf4de82dda5d47fd69612c05fe.json  query-3d7cce17dff271ee21f2474cb3c61052c79330386db2e08bb4e327abaeb12a08.json  query-4c737d8746879c5be9213cbd537e8788cffda7d63d9dd48cda25afd74cecdbb0.json  query-50adb0371d8dcb01a75aa4e3add10a93a7b388769570d4ace627577baf6d7271.json  query-64f2f8e9075d54e6f2435609d1b73cade3fc3bb93c2883acb8502008a7f1169d.json  query-6eeb3c92a979cef4c36c18f28e2cacb21415ceb8566f800b6ec3e38473463f32.json  query-8abd3f67cb7384a8dc3df9aaf1f6473775be0ba695b60d8c6942875cd13633d9.json  query-8b619d8fddd7d3c13b57f6d3dd25a7f6f1d9d685e360e564bcf4d1f94479791e.json  (+7 more)
crates/cloud-deployment/: Cargo.toml
crates/cloud-deployment/src/: config.rs  lib.rs
data/: config.json
docs/: DEPLOYMENT.md  (+3 more)
(+278 files in other folders)
