[package]
name = "cloud-deployment"
version = "0.0.116"
edition = "2024"

[dependencies]
async-trait = "0.1"
anyhow = { workspace = true }
deployment = { path = "../deployment" }
local-deployment = { path = "../local-deployment" }
services = { path = "../services" }
db = { path = "../db" }
utils = { path = "../utils" }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
